--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -31,6 +31,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: -1;
 }
 
 .pageWithAbsoluteTabs neon-animatable {
@@ -524,7 +525,7 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
 }
 
 .portraitDetailImageContainer + .primaryDetailsContainer {
-    width: 75%;
+    width: 74%;
 }
 
 .parentName {
