--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -505,6 +505,82 @@ select {
         color: #fff;
     }
 
+.ui-body-a select {
+    background: none;
+    border-color: rgb(221, 221, 221);
+}
+
+    .ui-body-a select option {
+        color: #000;
+    }
+
+a[data-role='button'], button:not([data-role='none']):not(.clearButton) {
+    -webkit-font-smoothing: antialiased;
+    -webkit-user-select: none;
+    background-clip: padding-box;
+    border-radius: .3125em;
+    border: 1px solid #ddd !important;
+    color: rgb(51, 51, 51) !important;
+    cursor: pointer !important;
+    font-family: inherit !important;
+    font-size: inherit !important;
+    font-weight: 500 !important;
+    margin: 0 .25em !important;
+    display: inline-block;
+    padding: .8em 1em;
+    text-align: center;
+    text-decoration: none !important;
+    background: #f6f6f6 !important;
+    font-size: 16px;
+    -webkit-box-shadow: 0 1px 3px /*{global-box-shadow-size}*/ rgba(0,0,0,.15) /*{global-box-shadow-color}*/;
+    -moz-box-shadow: 0 1px 3px /*{global-box-shadow-size}*/ rgba(0,0,0,.15) /*{global-box-shadow-color}*/;
+    box-shadow: 0 1px 3px /*{global-box-shadow-size}*/ rgba(0,0,0,.15) /*{global-box-shadow-color}*/;
+}
+
+    a[data-role='button']:not([data-inline='true']), button:not([data-role='none']):not([data-inline='true']):not(.clearButton) {
+        display: block;
+        margin: .5em 0 !important;
+    }
+
+    a[data-role='button']:focus, button:not([data-role='none']):focus {
+        -webkit-box-shadow: 0 0 12px #3388cc /*{a-active-background-color}*/;
+        -moz-box-shadow: 0 0 12px #3388cc /*{a-active-background-color}*/;
+        box-shadow: 0 0 12px #3388cc /*{a-active-background-color}*/;
+    }
+
+    button:not([data-role='none']):not([data-inline='true']):not(.clearButton) {
+        width: 100%;
+    }
+
+div[data-role="controlgroup"] a[data-role='button'] {
+    display: inline-block !important;
+    margin: 0 !important;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+    border-radius: 0;
+}
+
+    div[data-role="controlgroup"] a[data-role='button']:first-child {
+        border-bottom-left-radius: .3125em;
+        border-top-left-radius: .3125em;
+    }
+
+    div[data-role="controlgroup"] a[data-role='button']:last-child {
+        border-bottom-right-radius: .3125em;
+        border-top-right-radius: .3125em;
+    }
+
+    div[data-role="controlgroup"] a[data-role='button'] + a[data-role='button'] {
+        border-left-width: 0 !important;
+        margin: 0 0 0 -3px !important;
+    }
+
+div[data-role="controlgroup"] a.ui-btn-active {
+    background: #38c !important;
+    color: #fff !important;
+}
+
 .smoothScrollX {
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
