--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -32,10 +32,12 @@
 
     .libraryViewNav paper-tabs {
         height: 58px !important;
+        flex-grow: 0 !important;
     }
 
     .libraryViewNav paper-tab {
         height: auto !important;
+        flex-grow: 0 !important;
     }
 
     .libraryViewNav iron-icon {
@@ -51,6 +53,10 @@
 
     .libraryViewNav #selectionBar {
         background-color: transparent !important;
+    }
+
+    .libraryViewNav #tabsContainer {
+        flex-grow: 0 !important;
     }
 
 @media all and (max-width: 600px) {
