--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -126,7 +126,7 @@
     margin: 7px;
 }
 
-.ui-page-theme-b .visualCardBox {
+.ui-body-b .visualCardBox {
     background: rgba(40,40,40,.85);
     border-radius: 3px;
 }
