--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -157,7 +157,7 @@
     color: #333;
 }
 
-.ui-page-theme-b .logoLibraryMenuButtonText, .ui-bar-b .logoLibraryMenuButtonText {
+.ui-body-b .logoLibraryMenuButtonText, .ui-bar-b .logoLibraryMenuButtonText {
     color: #fff;
 }
 
