--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/android.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/android.css
@@ -18,7 +18,7 @@
     background-color: #383838;
 }
 
-.ui-page-theme-b .visualCardBox {
+.ui-body-b .visualCardBox {
     background: rgba(56,56,56,.85);
 }
 
