--- a/MediaBrowser.WebDashboard/dashboard-ui/components/subtitleeditor/subtitleeditor.template.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/components/subtitleeditor/subtitleeditor.template.html
@@ -1,11 +1,11 @@
-﻿<div class="readOnlyContent" style="max-width: 700px;margin:auto;">
+﻿<div class="readOnlyContent" style="max-width: 800px;margin:auto;">
     <div>
         <div class="subtitleList"></div>
     </div>
     <br />
     <h1>${HeaderSearchForSubtitles}</h1>
 
-    <form class="subtitleSearchForm">
+    <form class="subtitleSearchForm" style="max-width:none;">
         <div style="display: inline-block; width: 85%;">
             <label for="selectLanguage">${LabelLanguage}</label>
             <select id="selectLanguage" required="required" data-mini="true"></select>
@@ -15,10 +15,8 @@
         </button>
     </form>
     <br />
-    <div class="readOnlyContent" style="max-width: 700px;">
-        <div class="subtitleResults"></div>
-        <div class="noSearchResults" style="display: none;">
-            ${MessageNoSubtitleSearchResultsFound}
-        </div>
+    <div class="subtitleResults"></div>
+    <div class="noSearchResults" style="display: none;">
+        ${MessageNoSubtitleSearchResultsFound}
     </div>
 </div>
