--- a/MediaBrowser.WebDashboard/dashboard-ui/css/metadataeditor.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/metadataeditor.css
@@ -34,13 +34,6 @@
     top: -2px;
 }
 
-.availableImagesList {
-    overflow-y: auto;
-    width: 300px;
-    height: 400px;
-    text-align: center;
-}
-
 .remoteImageContainer {
     display: inline-block;
     margin: 8px;
@@ -48,9 +41,24 @@
 }
 
 .remoteImageDetails {
-    background: #eee;
-    padding: 3px 5px;
+    text-align: center;
+    background: #282828;
+    position: relative;
 }
+
+    .remoteImageDetails paper-icon-button {
+        position: absolute;
+        bottom: 0;
+        right: 5px;
+    }
+
+.remoteImageDetailText {
+    padding: 5px 5px;
+}
+
+    .remoteImageDetailText + .remoteImageDetailText {
+        color: #ccc;
+    }
 
 .remoteImage {
     background-position: center bottom;
@@ -156,19 +164,8 @@
     background: #52B54B !important;
 }
 
-@media all and (min-width: 500px) {
-
-    .availableImagesList {
-        width: 400px;
-    }
-}
-
 @media all and (min-width: 600px) {
 
-    .availableImagesList {
-        width: 500px;
-        height: 450px;
-    }
 
     .remoteBannerImage {
         width: 450px;
@@ -277,10 +274,6 @@
 
 @media all and (min-width: 700px) {
 
-    .availableImagesList {
-        width: 600px;
-    }
-
     .popupIdentify {
         width: 500px;
     }
@@ -291,10 +284,6 @@
 }
 
 @media all and (min-width: 800px) {
-
-    .availableImagesList {
-        width: 700px;
-    }
 
     .editPageSidebar {
         position: fixed;
@@ -318,20 +307,12 @@
 
 @media all and (min-width: 900px) {
 
-    .availableImagesList {
-        width: 800px;
-    }
-
     .popupIdentify {
         width: 700px;
     }
 }
 
 @media all and (min-width: 1000px) {
-
-    .availableImagesList {
-        width: 900px;
-    }
 
     .popupIdentify {
         width: 800px;
@@ -340,10 +321,6 @@
 
 @media all and (min-width: 1100px) {
 
-    .availableImagesList {
-        width: 1000px;
-    }
-
     .popupIdentify {
         width: 900px;
     }
@@ -351,33 +328,8 @@
 
 @media all and (min-width: 1200px) {
 
-    .availableImagesList {
-        width: 1100px;
-    }
-
     .popupIdentify {
         width: 1000px;
-    }
-}
-
-@media all and (min-width: 1300px) {
-
-    .availableImagesList {
-        width: 1200px;
-    }
-}
-
-@media all and (min-width: 1400px) {
-
-    .availableImagesList {
-        width: 1300px;
-    }
-}
-
-@media all and (min-width: 1500px) {
-
-    .availableImagesList {
-        width: 1400px;
     }
 }
 
@@ -445,10 +397,6 @@
 
 @media all and (min-height: 800px) {
 
-    .availableImagesList {
-        height: 600px;
-    }
-
     .popupIdentify form, .identificationSearchResults {
         height: 600px;
     }
@@ -459,10 +407,6 @@
 }
 
 @media all and (min-height: 900px) {
-
-    .availableImagesList {
-        height: 700px;
-    }
 
     .popupIdentify form, .identificationSearchResults {
         height: 700px;
