update image editor

--- a/MediaBrowser.WebDashboard/dashboard-ui/components/imagedownloader/imagedownloader.template.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/components/imagedownloader/imagedownloader.template.html
@@ -7,10 +7,10 @@
             <option value="">${OptionAll}</option>
         </select>
     </div>
-    <div style="margin: 0; display: inline-block;">
+    <div style="margin-left:1em; display: inline-block;">
         <label for="selectBrowsableImageType">${LabelImage}</label>
     </div>
-    <div style="margin: 0; display: inline-block;">
+    <div style="display: inline-block;">
         <select id="selectBrowsableImageType" name="selectBrowsableImageType" data-mini="true" data-inline="true">
             <option value="Primary">${OptionPrimary}</option>
             <option value="Art">${OptionArt}</option>
