--- a/MediaBrowser.WebDashboard/dashboard-ui/components/imagedownloader/imagedownloader.template.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/components/imagedownloader/imagedownloader.template.html
@@ -1,17 +1,13 @@
 ﻿<div style="text-align: center;">
     <div style="margin: 0; display: inline-block;">
-        <label for="selectImageProvider">${LabelSource}</label>
-    </div>
-    <div style="margin: 0; display: inline-block;">
-        <select id="selectImageProvider" style="padding-left:.5em;padding-right:0;">
+        <label for="selectImageProvider" style="display: inline-block;">${LabelSource}</label>
+        <select id="selectImageProvider" style="padding-left:.5em;padding-right:0;display: inline-block;width:auto!important;">
             <option value="">${OptionAll}</option>
         </select>
     </div>
     <div style="margin-left:.5em; display: inline-block;">
-        <label for="selectBrowsableImageType">${LabelImage}</label>
-    </div>
-    <div style="display: inline-block;">
-        <select id="selectBrowsableImageType" style="padding-left:.5em;padding-right:0;">
+        <label for="selectBrowsableImageType" style="display: inline-block;">${LabelImage}</label>
+        <select id="selectBrowsableImageType" style="padding-left:.5em;padding-right:0;display: inline-block;width:auto!important;">
             <option value="Primary">${OptionPrimary}</option>
             <option value="Art">${OptionArt}</option>
             <option value="Backdrop">${OptionBackdrop}</option>
