--- a/MediaBrowser.WebDashboard/dashboard-ui/components/imageeditor/imageeditor.template.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/components/imageeditor/imageeditor.template.html
@@ -12,7 +12,7 @@
 <div id="backdropsContainer" style="display: none;">
     <div>
         <h1 style="display:inline-block;vertical-align:middle;">${HeaderBackdrops}</h1>
-        <paper-fab icon="search" class="btnBrowseAllImages mini subdued" style="vertical-align:middle;margin-left:1em;"></paper-fab>
+        <paper-fab icon="search" class="btnBrowseAllImages mini subdued" style="vertical-align:middle;margin-left:1em;" data-imagetype="Backdrop"></paper-fab>
         <paper-fab icon="add" class="btnOpenUploadMenu mini subdued" style="vertical-align:middle;margin-left:.25em;"></paper-fab>
     </div>
     <div id="backdrops">
@@ -21,7 +21,11 @@
 </div>
 
 <div id="screenshotsContainer" style="display: none;">
-    <h1>${Screenshots}</h1>
+    <div>
+        <h1 style="display:inline-block;vertical-align:middle;">${Screenshots}</h1>
+        <paper-fab icon="search" class="btnBrowseAllImages mini subdued" style="vertical-align:middle;margin-left:1em;" data-imagetype="Screenshot"></paper-fab>
+        <paper-fab icon="add" class="btnOpenUploadMenu mini subdued" style="vertical-align:middle;margin-left:.25em;"></paper-fab>
+    </div>
     <div id="screenshots">
     </div>
 </div>
