--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -154,6 +154,13 @@ h1, h1 a {
     padding: 0 !important;
 }
 
+@media all and (max-width: 400px) {
+
+    .libraryMenuButtonText {
+        display: block;
+    }
+}
+
 .libraryPanelHeader span {
     font-weight: 400;
 }
@@ -216,9 +223,5 @@ paper-tab {
 }
 
 .nowPlayingPageBackButton {
-    display: none !important;
-}
-
-.nowPlayingPagePaperTabs {
     display: none !important;
 }
