update now playing

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -774,6 +774,13 @@ textarea {
     vertical-align: middle;
 }
 
+@media all and (max-height: 800px) {
+
+    .header {
+        display: none !important;
+    }
+}
+
 .btnCurrentUser {
     text-decoration: none;
 }
@@ -1585,9 +1592,9 @@ progress {
     margin: 0 0 3em 0;
 }
 
-.syncActivityForTarget paper-fab {
-    border-radius: 0;
-}
+    .syncActivityForTarget paper-fab {
+        border-radius: 0;
+    }
 
 @media all and (min-width: 800px) {
 
