--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -108,7 +108,7 @@ body {
 }
 
 .libraryViewNav .ui-btn-active, .libraryViewNav .iron-selected, .btnActiveCast {
-    color: #007AFF !important;
+    color: #52B54B !important;
 }
 
 .channelTimeslotHeader {
